@@ -251,6 +251,7 @@
   "wysiwyg_split_cell" => "Cellen splitsen",
   "yes" => "Ja",
   "thousands_separator"=>".",
+  "relogin"=>"Opnieuw inloggen",
 );
 
 ?>
